# protein-benchmark-models

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint.yml  tests.yml
argo/: README.md  train-classifier-pipeline.yaml  train-pipeline.yaml
configs/: flip2_amylase_random_split_cnn_regressor.json  flip2_amylase_random_split_mlp_regressor.json  flip2_amylase_random_split_ridge_regressor.json  fluorescence_mlp_regressor.json  iris_gb_classifier.json  iris_gb_classifier_local.json  iris_mlp_classifier.json  iris_mlp_classifier_local.json  tape_fluorescence_cnn_regressor.json  tape_fluorescence_mlp_regressor.json  tape_fluorescence_ridge_regressor.json
configs/local/: bernett_ppi_siamese_cnn_w_att_classifier.json  bernett_ppi_siamese_mlp_classifier.json  flip2_amylase_random_split_cnn_regressor.json  flip2_amylase_random_split_mlp_regressor.json  flip2_amylase_random_split_ridge_regressor.json  tape_fluorescence_cnn_regressor.json  tape_fluorescence_mlp_regressor.json  tape_fluorescence_ridge_regressor.json
configs/remote/: bernett_ppi_siamese_cnn_w_att_classifier.json  bernett_ppi_siamese_mlp_classifier.json  flip2_amylase_random_split_cnn_regressor.json  flip2_amylase_random_split_mlp_regressor.json  flip2_amylase_random_split_ridge_regressor.json  tape_fluorescence_cnn_regressor.json  tape_fluorescence_mlp_regressor.json  tape_fluorescence_ridge_regressor.json  test_config.json
docker/preprocess/: Dockerfile
docker/serve/: Dockerfile
docker/train/: Dockerfile
modal/: README.md  train_modal.py
notebooks/: 0.iris_eda.ipynb  0.tape_eda.ipynb  1.iris_classifier.ipynb  1.regression_models.ipynb  1.tape_fluorescence.ipynb  1.tape_regression.ipynb  2.tape_stability.ipynb
scripts/: onboard.py  preprocess.py  serve.py  train.py
src/ml_project_template/: __init__.py
src/ml_project_template/data/: __init__.py  base.py  tabular.py
tests/: conftest.py  test_dataset.py  test_models.py  test_registry.py  test_seed.py  test_serve.py
(+36 files in other folders)
