[project]
name = "protein-benchmark-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "fastapi",
    "ipykernel>=7.2.0",
    "joblib",
    "lightning>=2.6.1",
    "mlflow>=3.9.0",
    "numpy<2; sys_platform == 'darwin'",
    "numpy; sys_platform == 'linux'",
    "pandas",
    "python-dotenv",
    "pip>=26.0.1",
    "s3fs>=2026",
    "scikit-learn",
    "torch>=2.0,<2.3; sys_platform == 'darwin'",
    "torch>=2.0; sys_platform == 'linux'",
    "uvicorn[standard]",
    "seaborn>=0.13.2",
    "ruff>=0.15.7",
]

[project.scripts]
protein-benchmark-models = "protein_benchmark_models:main"

[dependency-groups]
dev = ["httpx>=0.27", "pytest>=8.0", "modal>=0.73"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
